--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
     margin: auto;
     width: 450px;
 }
-/* REACT_APP_LOCALHOST_KEY="zenDesk" */
+/* REACT_APP_LOCALHOST_KEY="HelpDesk" */
 .success-wrapper{
     text-align: center;
     background-color:#92f092;
